readme features updated

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -9,7 +9,7 @@
       <button menuClose ion-item>
         Home
       </button>
-      <button ion-item (click)="logout()">
+      <button menuClose ion-item (click)="logout()">
         Logout
       </button>
     </ion-list>
